; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_get_mouse_pos.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_get_mouse_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_input_get_mouse_pos(%struct.input_ctx* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.input_ctx*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %8 = call i32 @input_lock(%struct.input_ctx* %7)
  %9 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %10 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32*, i32** %5, align 8
  store i32 %11, i32* %12, align 4
  %13 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %14 = getelementptr inbounds %struct.input_ctx, %struct.input_ctx* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load i32*, i32** %6, align 8
  store i32 %15, i32* %16, align 4
  %17 = load %struct.input_ctx*, %struct.input_ctx** %4, align 8
  %18 = call i32 @input_unlock(%struct.input_ctx* %17)
  ret void
}

declare dso_local i32 @input_lock(%struct.input_ctx*) #1

declare dso_local i32 @input_unlock(%struct.input_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
